Closed Bug 346054 Opened 20 years ago Closed 20 years ago

Crash when removing <tooltip> before showing it

Categories

(Core :: Layout, defect)

defect
Not set
normal

Tracking

()

VERIFIED FIXED

People

(Reporter: smaug, Assigned: smaug)

References

Details

(4 keywords)

Attachments

(3 files, 1 obsolete file)

testcase and a simple patch coming.
Attached file testcase
Attached patch simple fix (obsolete) — Splinter Review
I noticed this crash while I was trying to reproduce Bug 184363 (still haven't seen that crash). I know menu/popup handling should be quite different, but because it is still modifying content in layout, better to make it not crash so easily.
Attachment #230855 - Flags: superreview?(roc)
Attachment #230855 - Flags: review?(roc)
Attachment #230855 - Attachment is obsolete: true
Attachment #230859 - Flags: superreview?(roc)
Attachment #230859 - Flags: review?(roc)
Attachment #230855 - Flags: superreview?(roc)
Attachment #230855 - Flags: review?(roc)
Keywords: crash, testcase
Attachment #230859 - Flags: superreview?(roc)
Attachment #230859 - Flags: superreview+
Attachment #230859 - Flags: review?(roc)
Attachment #230859 - Flags: review+
Status: NEW → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
Depends on: 346424
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
I'll write a new patch, so that bug 346424 doesn't happen.
And because the patch in bug 343457 is also in 1.8, this should be there too.
Depends on: 343457
Flags: blocking1.8.1?
Attached patch better patchSplinter Review
This doesn't regress bug 343457 or bug 346424. Ugly, but should be safe.
Attachment #231572 - Flags: superreview?(roc)
Attachment #231572 - Flags: review?(roc)
Flags: blocking1.8.1? → blocking1.8.1+
Attachment #231572 - Flags: superreview?(roc)
Attachment #231572 - Flags: superreview+
Attachment #231572 - Flags: review?(roc)
Attachment #231572 - Flags: review+
Will ask approval for 1.8 soon.
Status: REOPENED → RESOLVED
Closed: 20 years ago20 years ago
Resolution: --- → FIXED
Attachment #231572 - Flags: approval1.8.1?
Comment on attachment 231572 [details] [diff] [review] better patch a=schrep for drivers.
Attachment #231572 - Flags: approval1.8.1? → approval1.8.1+
Keywords: fixed1.8.1
Since bug 343457 is blocking 1.8.0.7, this should too.
Flags: blocking1.8.0.7?
Comment on attachment 231572 [details] [diff] [review] better patch This depends on bug 343457
Attachment #231572 - Flags: approval1.8.0.7?
Comment on attachment 231572 [details] [diff] [review] better patch approved for 1.8.0 branch, a=dveditz for drivers
Attachment #231572 - Flags: approval1.8.0.7? → approval1.8.0.7+
Flags: blocking1.8.0.7? → blocking1.8.0.7+
Keywords: fixed1.8.0.7
Verified FIXED using 1.8 and 1.8.0 on Linux (X11; U; Linux i686; en-US;). For what it's worth, attachment 230854 [details] didn't crash 1.5.0.6 even before this patch went in.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: