Bug 346054, Crash when removing <tooltip> before showing it, r+sr=roc